fixed dreamsmile intro page spacing

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -160,7 +160,11 @@ td {
 
     h4 {
       text-align: center;
-    }   
+    }
+
+    h6 {
+      margin-bottom: 1px;
+    }
 
     li { 
       font-size: 16px;
